--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
     color:#533738;
     font-size: 18px;
     font-weight: 500;
-    background-color: #E5E5E5;;
+    background-color: #EFE6E4;
+    min-width: 1200px;
 }
 
 header{
@@ -22,12 +23,12 @@ header{
     font-size: 16px;
 }
 
-.logo{
+.header__logo{
     display: flex;
     align-items: center;
     margin-right: 90px;}
 
-.nav-list{
+.header__nav-list{
     
     display: flex;
     
@@ -55,21 +56,24 @@ a:visited:hover{
     color: #dd6971;
 }
 
-.phone{
+.header__phone{
     margin-left:8px;
 
 }
-.phone:hover{
-    color:#533738;
+.header__phone:hover{
     color: #dd6971;
 }
-.top{
-    background-image: url(img/top.png);
-    height: 600px;
-    background-size: cover;
-    padding-top:190px;
-    padding-left:435px;
 
+.top-wrapper{
+    background-image: url(img/top.png);
+    height: 565px;
+    background-size: cover;
+    padding-top:190px;  
+}
+.top{
+    
+    width: 1000px;
+    margin:0 auto;
 }
 
 .top__heading{
@@ -97,4 +101,126 @@ a:visited:hover{
 
 .top__button:hover{
     background-color: #dbbdba;
+}
+
+.about{
+    height: 715px;  
+}
+
+.about__heading{
+    text-align: center;
+    margin: 60px 0;
+    font-size: 40px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.about__content{
+    width: 1200px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 auto;
+}
+
+.about__content__text{
+    width:528px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    
+}
+
+.experience{
+    height: 273px;
+    display: flex;
+    background-color: #8D7370;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.experience__text{
+    color:white;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.experience__text span{
+    font-size: 40px;
+    line-height: 62px;
+    display: block;
+    text-align: center;
+    
+}
+
+.works{
+    width: 1200px;
+    margin: 65px auto 0px;
+}
+
+.works__heading{
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.works__gallery{
+    display: grid;
+    grid-template-columns: 488px 184px 488px;
+    grid-auto-columns: 450px;
+    column-gap: 20px;
+    row-gap: 30px;
+}
+
+.works__gallery__image{
+    position: relative;
+    color: white;
+}
+
+
+.works__gallery__image:nth-child(2){grid-column:2/-1;}
+.works__gallery__image:nth-child(3){grid-column: 1/3;}
+
+.works__more{
+    margin: 40px auto 65px;
+    width: 300px;
+
+}
+
+.works__gallery__image-hover{
+    position: absolute;
+    box-sizing: border-box;
+    z-index: -1;
+    top:0;
+    background: rgba(100, 72, 69, 0.8);
+    padding: 85px 35px 0px;
+    height: 99%;
+    width: 100%;}
+
+
+.works__more__text{
+    font-size: 30px;
+    font-weight: 600;
+    margin-right: 10px;
+}
+
+.works__more:hover path {
+    fill: #dd6971;
+}
+
+
+.works__gallery__image-hover__heading{
+    font-weight: 600;
+    font-size: 30px;
+    text-align: center;
+    width: 270px;
+    margin:0 auto;
+}
+
+.works__gallery__image-hover__text{
+    line-height: 30px;
+    margin-top:30px;
+}
+
+.works__gallery__image:hover .works__gallery__image-hover{
+    z-index: 1;
 }
