--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a:visited:hover{
 }
 
 .about{
-    height: 715px;  
+    height: 641px;  
 }
 
 .about__heading{
@@ -275,4 +275,143 @@ a:visited:hover{
     font-weight: 600;
     line-height: 70px;
     margin-bottom: 20px;
+}
+
+.reviews{
+    height: 800px;
+}
+.reviews__heading{
+    text-align: center;
+    padding:65px 0 40px;
+    font-size: 40px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.reviews__container{
+    display: grid;
+    grid-template-columns: 72px 407px 407px 72px;
+    grid-template-rows: 90px 194px 194px 90px;
+    align-items: center;
+    margin:0 auto;
+    width: fit-content;
+    column-gap: 30px;
+    row-gap:5px;
+}
+
+.reviews__container__button{
+    height: 72px;
+    border-radius: 100%;
+    border:none; 
+    background-color: #CC8B86;
+    grid-row:1/-1;
+}
+
+.reviews__container__button_reversed{
+    transform: scale(-1, 1);
+}
+
+.reviews__container__button:hover{
+    background-color: #dbbdba;
+    cursor: pointer;
+    
+}
+.reviews__container__button:hover path{fill:#CC8B86;}
+
+.reviews__container__text{
+  grid-row: 1/-1;  
+  grid-column: 2/3;
+}
+
+.reviews__container__text p{
+    line-height: 30px;
+    margin-top: 1em;
+}
+
+.reviews__container__text__author{
+    text-transform: uppercase;
+}
+.reviews__container__image{
+grid-column: 3/4;
+}
+.reviews__container__image:nth-of-type(1){
+    grid-row: 1/3;
+}
+.reviews__container__image:nth-of-type(2){
+    grid-row: 3/-1;
+}
+.feedback{
+    height: 624px;
+    background-color: #8D7370;
+}
+.feedback__container{
+    display: flex;
+    width: 1200px;
+    margin:0 auto;
+    padding-top:50px;
+}
+.feedback__container__text{
+    color: white;
+    width: 507px;
+    line-height: 30px;
+    padding-left:80px;
+}
+.feedback__container__text p{
+    opacity: 0.6;
+}
+.feedback__container__text__heading{
+    font-weight: 500;
+    font-size: 40px;
+    margin-bottom: 24px;
+    text-transform: uppercase;
+}
+.feedback__container__text__form{
+    margin-top:45px;
+}
+.feedback__container__text__form__input{
+    width:508px;
+    height: 50px;
+    background-color: transparent;
+    border-left:none;
+    border-top:none;
+    border-right: none;
+    border-bottom-color: white;
+    border-bottom-width: 1px;
+    margin-bottom: 35px;
+    font-family: "Montserrat";
+    font-size: 18px;
+    line-height: 30px;
+    color: white;
+}
+.feedback__container__text__form__input::placeholder{
+    font-family: "Montserrat";
+    font-size: 18px;
+    line-height: 30px;
+    color: white;
+    
+}
+.feedback__container__text__form__input:focus{
+    outline: none;
+}
+.feedback__container__text__form__button{
+    background-color: #CC8B86;
+    font-family: "Montserrat";
+    font-size: 20px;
+    color: #533738;
+    padding:25px 67px 25px 67px;
+    border:none;
+    cursor: pointer;
+    font-weight: 600;
+
+}
+.feedback__container__map{
+    margin-top:-50px;
+    margin-left:20px;
+
+}
+footer{
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    width: 1200px;
+    margin:37px auto;
 }
